tests/macros/float/page_size.stderr
error: option `page_size` does not exist for kind `float`
 --> $DIR/page_size.rs:2:37
  |
2 |     inquisition::questions![Float { page_size: todo!() }];
  |                                     ^^^^^^^^^
