tests/macros/float/page_size.rs
fn main() {
    inquisition::questions![Float { page_size: todo!() }];
}
